# Barcode_scanner

./: .gitignore  CMakeLists.txt  README.md
debug/: results.txt
include/: functions.h
includes/: defines.h  functions.h
src/: decoder.c  getSensorsData.c  main.c  reverser.c
team_barco_v0.1/: decoder.c  defines.h  functions.h  getSensorsData.c  main.c
team_barco_v0.3/: decoder.c  defines.h  functions.h  getSensorsData.c  main.c  strrev.c
team_barco_v0.6/: CMakeLists.txt
team_barco_v0.6.1-cmake-rc/team_barco_v0.6.1/include/: defines.h
team_barco_v0.6.1-cmake-rc/team_barco_v0.6.1/src/: checkDigit.c
team_barco_v0.6/include/: defines.h  functions.h
team_barco_v0.6/src/: checkDigit.c  decoder.c  main.c  reverser.c  strrev.c
temp/: BarcodeLog.txt  barcode.c  barcodeFunc.c  barcodeFunc.h  barcodeLib.h  main.c  tryFunc.c  tryFunc.h
test/: Hello  Hello.c
v0.2/: decoder.c  defines.h  getSensorsData.c  main.c
